--- a/frontend/src/styles/initial-login-style-teacher.css
+++ b/frontend/src/styles/initial-login-style-teacher.css
@@ -1,3 +1,15 @@
+:root{
+    --body: #f3f8fe;
+    --orange: #FEC868;
+    --pink: #FF708D;
+    --purple: #DCC1FC;
+    --green: #A3E487;
+
+    --hover-pink: #e94e6d;
+    --hover-purple: #ae7deb;
+}
+
+
 * {
     margin: 0;
     padding: 0;
@@ -8,11 +20,12 @@ body {
     display: flex;
     flex-direction: column;
     height: 100vh;
+    background-color: var(--body);
 }
 
 header {
     display: flex;
-    background-color: #FEC868;
+    background-color: var(--orange);
     height: 6vh;
     align-items: center;
     justify-content: center;
@@ -48,13 +61,13 @@ main {
     color: #000;
     width: 45%;
     height: 40px;
-    background-color: #FF708D;
+    background-color: var(--pink);
     border: none;
     border-radius: 20px;
 }
 
 .btn-primary:hover{
-    background-color: #e94e6d;
+    background-color: var(--hover-pink);
     color: #000;
 }
 
@@ -62,13 +75,13 @@ main {
     color: #000;
     width: 45%;
     height: 40px;
-    background-color: #DCC1FC;
+    background-color: var(--purple);
     border: none;
     border-radius: 23px;
 }
 
 .btn-secondary:hover{
-    background-color: #ae7deb;
+    background-color: var(--hover-purple);
     color: #000;
 }
 
@@ -89,7 +102,7 @@ footer {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #A3E487;
+    background-color: var(--green);
     height: 6vh;
     width: 100%;
 }
