--- a/frontend/src/styles/login-page-style-guardian.css
+++ b/frontend/src/styles/login-page-style-guardian.css
@@ -1,3 +1,15 @@
+:root{
+    --body: #f3f8fe;
+    --orange: #FEC868;
+    --pink: #FF708D;
+    --purple: #DCC1FC;
+    --green: #A3E487;
+    --background: #e7e7e7;
+
+    --hover-pink: #e94e6d;
+    --hover-purple: #ae7deb;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -8,13 +20,13 @@ body {
     display: flex;
     flex-direction: column;
     height: 100vh;
-    background-color: #DCC1FC;
+    background-color: var(--purple);
     align-items: center;
 }
 
 header {
     display: flex;
-    background-color: #FEC868;
+    background-color: var(--orange);
     height: 6vh;
     width: 100%;
     align-items: center;
@@ -29,7 +41,7 @@ header {
 .initial-components {
     display: flex;
     flex-direction: column;
-    background-color: #FFFFFF;
+    background-color: var(--body);
     width: 40%;
     height: 60vh;
     align-items: center;
@@ -50,7 +62,7 @@ header {
 .login-email, .login-password {
     display: flex;
     align-items: center;
-    background-color: #D9D9D9;
+    background-color: var(--background);
     height: 6vh;
     width: 70%;
     gap: 10px;
@@ -63,32 +75,64 @@ header {
 }
 
 .input-email, .input-password {
-    background-color: #D9D9D9;
+    background-color: var(--background);
     border: initial;
     outline: initial;
     vertical-align: middle;
 }
 
-.btn-primary{
+.login-btn{
     color: #000;
     width: 70%;
     height: 7vh;
-    background-color: #F1607D;
+    background-color: var(--pink);
     border: none;
     border-radius: 20px;
     font-size: 1.5rem;
 }
 
-.btn-primary:hover{
-    background-color: #e94e6d;
+.login-btn:hover{
+    background-color: var(--hover-pink);
     color: #000;
 }
 
 footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #A3E487;
+    background-color: var(--green);
     height: 6vh;
-    width: 100%;
+}
+
+@media only screen and (max-width: 768px) {
+    body {
+        background-color: var(--purple);
+    }
+
+    .initial-components {
+        width: 80%;
+        height: auto;
+        padding: 20px; 
+    }
+
+    .login-email, .login-password {
+        width: 90%;
+    }
+
+    .login-btn {
+        width: 90%;
+        font-size: 1.2rem;
+        height: 60%; 
+    }
+
+    footer {
+        position: static;
+        text-align: center;
+        font-size: 14px;
+        padding: 1%;
+      }
 }
