--- a/frontend/src/styles/schedule-guardian.css
+++ b/frontend/src/styles/schedule-guardian.css
@@ -21,7 +21,12 @@ body {
     width: auto;
     height: 100vh;
     gap: 2%;
-    background-color: var(--body);
+    background-color: #ffff;
+}
+
+body{
+    width: 100%;
+    height: 100vh;
 }
 
 main {
@@ -33,12 +38,12 @@ main {
     gap: 2%;
 }
 
-.classes-schedule{
+.children-schedule{
     width: 90%;
-    height: 70vh;
+    height: 65vh;
 }
 
-.class-one-schedule {
+.children-one-schedule {
     display: flex;
     flex-direction: row;
     background-color: var(--pink);
@@ -51,26 +56,23 @@ main {
 }
 
 footer {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: var(--green);
     height: 6vh;
+    width: 100%;
 }
 
 @media screen and (max-width: 768px) {
     h5{
         font-size: 1rem;
     }
-    .classes-schedule {
+    .children-schedule {
         width: 90%;
     }
 
-    .class-one-schedule {
+    .children-one-schedule {
         padding: 2%;
     }
 
