--- a/frontend/src/styles/dashboard-guardian.css
+++ b/frontend/src/styles/dashboard-guardian.css
@@ -16,6 +16,16 @@
     box-sizing: border-box;
 }
 
+#navbar{
+    padding: 0px;
+}
+
+.container-fluid{
+    background-color:#DCC1FC;
+    border-color: 10px solid #DCC1FC;
+
+}
+
 body {
     display: flex;
     flex-direction: column;
