--- a/frontend/src/styles/dashboard-teacher.css
+++ b/frontend/src/styles/dashboard-teacher.css
@@ -24,6 +24,16 @@ body {
     gap: 2%;
 }
 
+#navbar{
+    padding: 0px;
+}
+
+.container-fluid{
+    background-color:#DCC1FC;
+    border-color: 10px solid #DCC1FC;
+
+}
+
 .basic-info {
     display: flex;
     flex-direction: row;
