--- a/frontend/src/styles/schedule-guardian.css
+++ b/frontend/src/styles/schedule-guardian.css
@@ -28,6 +28,16 @@ nav {
     padding-right: 2%;
 }
 
+#navbar{
+    padding: 0px;
+}
+
+.container-fluid{
+    background-color:#DCC1FC;
+    border-color: 10px solid #DCC1FC;
+
+}
+
 #dropdown-logout {
 
     border-radius: 50px;
