--- a/frontend/src/styles/schedule-teacher.css
+++ b/frontend/src/styles/schedule-teacher.css
@@ -59,6 +59,7 @@ main {
     padding-left: 2%;
     align-items: center;
     border-radius: 10px;
+    margin-top: 1%;
 }
 
 .material-symbols-outlined {
