--- a/frontend/src/styles/dashboard-guardian.css
+++ b/frontend/src/styles/dashboard-guardian.css
@@ -78,7 +78,12 @@ body {
     border-radius: 20px;
     position: relative;
     padding-top: 1%;
+
+    overflow-x: auto;
+
+    flex-wrap: wrap;
 }
+
 
 .best-children-one,
 .best-children-two,
