criação da tela de chamada, finalização de parte da tela de avaliação do aluno, professor agora também analisa a média do aluno.

--- a/frontend/src/pages/student/dashboard-student.css
+++ b/frontend/src/pages/student/dashboard-student.css
@@ -23,3 +23,32 @@
 .bg-green{
     background-color: var(--green);
 }
+
+
+.rating {
+    display: flex;
+    flex-direction: row-reverse
+}
+
+.rating input {
+    display: none;
+}
+
+.rating label {
+    cursor: pointer;
+    font-size: 24px;
+    color: #ddd;
+
+}
+
+/* .rating label:hover,
+.rating label:hover~label {
+    color: #f39c12;
+
+} */
+
+.rating input:checked~label,
+.rating input:checked~label:hover,
+.rating input:checked~label:hover~label {
+    color: #f39c12;
+}
