--- a/frontend/src/styles/gallery-guardian.css
+++ b/frontend/src/styles/gallery-guardian.css
@@ -44,6 +44,27 @@ main {
     gap: 2%;
 }
 
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 50px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.9);
+}
+
+.modal-content {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+}
+
 .button{
     background-color: var(--pink);
 }
