--- a/frontend/src/styles/schedule-teacher.css
+++ b/frontend/src/styles/schedule-teacher.css
@@ -28,9 +28,60 @@ body {
     padding: 0px;
 }
 
+
+.sub-menu-wrap {
+    position: absolute;
+    top: 100%;
+    right: 0%;
+    width: 220px;
+    max-height: 400px;
+    overflow: hidden;
+    transition: all 0.5s;
+    visibility: hidden;
+    opacity: 0;
+ }
+
+.sub-menu-wrap.open-menu {
+    display: block;
+    visibility: visible;
+    opacity: 1;
+}
+
+.sub-menu {
+    background: #fff;
+    padding: 10px;
+    margin: 10px;
+    border-radius: 10%;
+}
+
+
+.sub-menu-link {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: #ae7deb;
+    margin: 5px 0;
+}
+
+.sub-menu-link p {
+    width: 100%;
+    height: 5px;
+}
+
+.sub-menu-link img {
+    width: 40px;
+    margin-right: 20px;
+}
+
+.sub-menu-link span {
+    font-size: 22px;
+    transition: transform 0.5s;
+}
+
 .container-fluid {
     background-color: #DCC1FC;
     border-color: 10px solid #DCC1FC;
+    padding: 5px;
 
 }
 
@@ -78,7 +129,7 @@ main {
     background-color: rgba(0, 0, 0, 0.4);
 }
 
-.modal-title{
+.modal-title {
     font-size: 1.3em;
 }
 
@@ -91,7 +142,7 @@ main {
     gap: 3%;
 }
 
-.modal-info{
+.modal-info {
     display: flex;
     text-align: center;
     flex-direction: column;
@@ -115,7 +166,7 @@ main {
 }
 
 .input-class,
-.input-title{
+.input-title {
     background-color: var(--body);
     border: none;
     box-shadow: none;
@@ -125,12 +176,12 @@ main {
     padding-left: 1%;
 }
 
-.reminder-content{
+.reminder-content {
     display: flex;
     flex-direction: row;
 }
 
-.input-message{
+.input-message {
     background-color: var(--body);
     border: none;
     box-shadow: none;
@@ -141,7 +192,7 @@ main {
     padding-top: 1%;
 }
 
-#clip{
+#clip {
     position: absolute;
     right: 3%;
     padding-top: 1%;
@@ -152,7 +203,7 @@ main {
     display: none;
 }
 
-.add-reminder-button{
+.add-reminder-button {
     width: 50%;
     height: 6vh;
     background-color: var(--purple);
@@ -162,7 +213,7 @@ main {
     font-size: 1.2rem;
 }
 
-.add-reminder-button:hover{
+.add-reminder-button:hover {
     background-color: var(--hover-purple);
 }
 
