--- a/frontend/src/styles/dashboard-guardian.css
+++ b/frontend/src/styles/dashboard-guardian.css
@@ -65,7 +65,37 @@ body {
     height: 100%;
 }
 
-.summary-notification,
+.summary-notification{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width: 41%;
+    height: 100%;
+    background-color: var(--background);
+    border-radius: 20px;
+    position: relative;
+    padding-top: 1%;
+
+    overflow-x: auto;
+
+    flex-wrap: wrap;
+}
+
+.notifications{
+    align-self: center;
+    width: 90%;
+    margin: 2% 5%;
+    border-radius: 25px;
+    padding: 0% 3%;
+    display: flex;
+    align-items: center;
+    background-color: var(--green);
+}
+
+.notifications p {
+    margin-bottom: 0px;
+}
+
 .last-info-children-evaluation,
 .last-info-calendar {
     display: flex;
