--- a/frontend/src/styles/schedule-teacher.css
+++ b/frontend/src/styles/schedule-teacher.css
@@ -52,7 +52,6 @@ main {
 .class-schedule {
     display: flex;
     flex-direction: row;
-    background-color: var(--pink);
     height: 7vh;
     justify-content: space-between;
     padding-right: 2%;
@@ -79,10 +78,12 @@ main {
     background-color: rgba(0, 0, 0, 0.4);
 }
 
+.modal-vw-title,
 .modal-title{
     font-size: 1.3em;
 }
 
+.modal-vw-content,
 .modal-content {
     background-color: var(--pink);
     margin: auto;
@@ -92,12 +93,14 @@ main {
     gap: 3%;
 }
 
+.modal-vw-info,
 .modal-info{
     display: flex;
     text-align: center;
     flex-direction: column;
 }
 
+.close-vw,
 .close {
     color: var(--body);
     float: right;
@@ -108,6 +111,7 @@ main {
     height: 24px;
 }
 
+.close-vw:hover,
 .close:hover,
 .close:focus {
     color: #000;
@@ -165,6 +169,17 @@ main {
 
 .add-reminder-button:hover{
     background-color: var(--hover-purple);
+}
+
+.schedule-item{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 2%;
+}
+
+.accordion{
+     border-radius: 10px;
 }
 
 footer {
