--- a/frontend/src/styles/schedule-teacher.css
+++ b/frontend/src/styles/schedule-teacher.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Grandstander&family=Noto+Sans+Mono&display=swap');
+
 :root {
     --body: #f3f8fe;
     --orange: #FEC868;
@@ -26,12 +28,88 @@ body {
 
 #navbar {
     padding: 0px;
+    /* background: #e0e0e0;
+    box-shadow: 22px 22px 44px #bebebe,
+        -22px -22px 22px #ffffff; */
+    /* font-family: "Noto Sans Mono", monospace; */
 }
+
+.page-title {
+    animation: animation-title 0.7s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+}
+
+@keyframes animation-title {
+    0% {
+        letter-spacing: -0.5em;
+        opacity: 0;
+    }
+
+    40% {
+        opacity: 0.6;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+.sub-menu-wrap {
+    position: absolute;
+    top: 100%;
+    right: 0%;
+    width: 220px;
+    max-height: 50vh;
+    overflow: hidden;
+    transition: all 0.5s;
+    visibility: hidden;
+    opacity: 0;
+}
+
+#user-pic-text {
+    visibility: hidden;
+}
+
+.sub-menu-wrap.open-menu {
+    display: block;
+    visibility: visible;
+    opacity: 1;
+}
+
+.sub-menu {
+    background: #fff;
+    padding: 2vh;
+    margin: 2vh;
+    border-radius: 10%;
+}
+
+
+.sub-menu-link {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: #ae7deb;
+    margin: 1vh 0;
+}
+
+.sub-menu-link p {
+    flex-grow: 1;
+    height: 2vh;
+}
+
+.sub-menu-link img {
+    width: 5vw;
+    margin-right: 2vw;
+}
+
+.sub-menu-link span {
+    font-size: 2vh;
+    transition: transform 0.5s;
+}
+
 
 .container-fluid {
     background-color: #DCC1FC;
     border-color: 10px solid #DCC1FC;
-
 }
 
 main {
@@ -78,8 +156,10 @@ main {
     background-color: rgba(0, 0, 0, 0.4);
 }
 
+
 .modal-vw-title,
 .modal-title{
+
     font-size: 1.3em;
 }
 
@@ -93,8 +173,10 @@ main {
     gap: 3%;
 }
 
+
 .modal-vw-info,
 .modal-info{
+
     display: flex;
     text-align: center;
     flex-direction: column;
@@ -120,7 +202,7 @@ main {
 }
 
 .input-class,
-.input-title{
+.input-title {
     background-color: var(--body);
     border: none;
     box-shadow: none;
@@ -130,12 +212,12 @@ main {
     padding-left: 1%;
 }
 
-.reminder-content{
+.reminder-content {
     display: flex;
     flex-direction: row;
 }
 
-.input-message{
+.input-message {
     background-color: var(--body);
     border: none;
     box-shadow: none;
@@ -146,7 +228,7 @@ main {
     padding-top: 1%;
 }
 
-#clip{
+#clip {
     position: absolute;
     right: 3%;
     padding-top: 1%;
@@ -157,7 +239,7 @@ main {
     display: none;
 }
 
-.add-reminder-button{
+.add-reminder-button {
     width: 50%;
     height: 6vh;
     background-color: var(--purple);
@@ -167,7 +249,7 @@ main {
     font-size: 1.2rem;
 }
 
-.add-reminder-button:hover{
+.add-reminder-button:hover {
     background-color: var(--hover-purple);
 }
 
@@ -207,10 +289,20 @@ footer {
         padding: 2%;
     }
 
+    .sub-menu-link div,
+    #user-pic {
+        display: none;
+    }
+
+    #user-pic-text {
+        visibility: visible;
+    }
+
     footer {
         position: static;
         text-align: center;
         font-size: 14px;
         padding: 1%;
     }
+
 }
