--- a/frontend/src/styles/dashboard-teacher.css
+++ b/frontend/src/styles/dashboard-teacher.css
@@ -124,6 +124,38 @@ body {
     padding-top: 1%;
 }
 
+
+.last-info-birthdays{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width: 41%;
+    height: 100%;
+    background-color: var(--background);
+    border-radius: 20px;
+    position: relative;
+    padding-top: 1%;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+}
+
+.birthdays{
+    align-self: center;
+    width: 90%;
+    margin: 2% 5%;
+    border-radius: 25px;
+    padding: 0% 3%;
+    display: flex;
+    align-items: center;
+    background-color: var(--green);
+    /* overflow-y: auto; */
+}
+
+.birthdays p {
+    margin-bottom: 0px;
+}
+
+
 .best-student-one,
 .best-student-two,
 .best-student-three {
