ajuste tela de turmas e moedas

--- a/frontend/src/styles/classes-teacher.css
+++ b/frontend/src/styles/classes-teacher.css
@@ -85,7 +85,10 @@ main {
 .students-container {
     display: none;
 }
-
+.total-class-coins{
+    justify-content: right;
+    padding-left: 2%;
+}
 .buttons{
     display: flex;
     flex-direction: row;
