--- a/frontend/src/styles/performance-guardian.css
+++ b/frontend/src/styles/performance-guardian.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Grandstander&family=Noto+Sans+Mono&display=swap');
 
 :root {
     --body: #f3f8fe;
@@ -29,6 +30,59 @@ body {
     padding: 0px;
 }
 
+.sub-menu-wrap {
+    position: absolute;
+    top: 100%;
+    right: 0%;
+    width: 220px;
+    max-height: 50vh;
+    overflow: hidden;
+    transition: all 0.5s;
+    visibility: hidden;
+    opacity: 0;
+}
+
+#user-pic-text {
+    visibility: hidden;
+}
+
+.sub-menu-wrap.open-menu {
+    display: block;
+    visibility: visible;
+    opacity: 1;
+}
+
+.sub-menu {
+    display: flex;
+    align-items: center;
+    background: #fff;
+    padding: 2vh;
+    margin: 2vh;
+    border-radius: 10%;
+}
+
+.sub-menu-link {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: #ae7deb;
+    margin: 1vh 0;
+}
+
+.sub-menu-link p {
+    flex-grow: 1;
+    height: 2vh;
+}
+
+.sub-menu-link img {
+    width: 5vw;
+    margin-right: 2vw;
+}
+
+.sub-menu-link span {
+    font-size: 2vh;
+    transition: transform 0.5s;
+}
 .container-fluid {
     background-color: #DCC1FC;
     border-color: 10px solid #DCC1FC;
@@ -73,4 +127,47 @@ footer {
     justify-content: center;
     background-color: var(--green);
     height: 6vh;
+}
+
+@media screen and (max-width: 768px) {
+    h5 {
+        font-size: 1rem;
+    }
+
+    .classes-schedule {
+        width: 90%;
+    }
+
+    .class-one-schedule {
+        padding: 2%;
+    }
+
+    .sub-menu-link div,
+    #user-pic {
+        display: none;
+    }
+
+    #user-pic-text {
+        visibility: visible;
+    }
+
+    footer {
+        position: static;
+        text-align: center;
+        font-size: 14px;
+        padding: 1%;
+    }
+}
+
+@media screen and (min-width: 769px) and (max-width: 991px) {
+
+    .sub-menu-link div,
+    #user-pic {
+        display: none;
+    }
+
+    #user-pic-text {
+        visibility: visible;
+    }
+
 }
