--- a/frontend/src/styles/dashboard-guardian.css
+++ b/frontend/src/styles/dashboard-guardian.css
@@ -81,6 +81,8 @@ body {
 }
 
 .notifications{
+    justify-content: space-evenly;
+    align-items: center;
     align-self: center;
     width: 90%;
     margin: 2% 5%;
@@ -88,12 +90,22 @@ body {
     padding: 0% 3%;
     display: flex;
     align-items: center;
-    background-color: var(--green);
     overflow-y: auto;
 }
 
 .notifications p {
     margin-bottom: 0px;
+}
+
+.btnLink{
+    border: 0;
+    border-radius: 10px;
+    height: 15%;
+    width: 85%;
+}
+
+.btnLink:hover{
+    background-color: var(--background);
 }
 
 .last-info-children-evaluation,
@@ -136,7 +148,24 @@ body {
     height: 100%;
     border-radius: 25px;
     justify-content: space-evenly;
+    gap: 10%;
+    padding-top: 3%;
 }
+
+#btnCheck{
+    cursor: pointer;
+    border-radius: 5px;
+    border: 0;
+    background-color: transparent;
+    
+}
+
+#spanCheck{
+    font-size: 18px;
+    margin: 0;
+    padding: 0;
+}
+
 
 footer {
     position: fixed;
