--- a/frontend/src/styles/dashboard-guardian.css
+++ b/frontend/src/styles/dashboard-guardian.css
@@ -50,7 +50,7 @@
     background: #fff;
     padding: 2vh;
     margin: 2vh;
-    border-radius: 10%;
+    border-radius: 20px;
     z-index: 100;
     border:0.2vh solid #e4e4e4;
 }
