--- a/frontend/src/styles/dashboard-guardian.css
+++ b/frontend/src/styles/dashboard-guardian.css
@@ -170,8 +170,20 @@ body {
     background-color: var(--background);
 }
 
-.last-info-children-evaluation,
 .last-info-calendar {
+    text-align: center;
+    width: 41%;
+    height: 100%;
+    background-color: var(--background);
+    border-radius: 20px;
+    padding: 1%;
+}
+
+.last-info-calendar h5 {
+    color: var(--orange);
+}
+
+.last-info-children-evaluation {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
